[project]
name = "bynki-bot"
version = "1.0.0"
description = "Telegram bot for currency exchange rates"
requires-python = "==3.13.9"
dependencies = [
    "aiogram==3.22.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4==4.14.2",
    "python-dotenv==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "*.py",
    "py.typed",
]
